add_compile_definitions(QTAWSALEXAFORBUSINESS_LIBRARY)

add_library(QtAwsAlexaForBusiness
  qtawsalexaforbusinessglobal.h
  alexaforbusinessclient.h
  alexaforbusinessclient_p.h
  alexaforbusinessrequest.h
  alexaforbusinessrequest_p.h
  alexaforbusinessresponse.h
  alexaforbusinessresponse_p.h
  approveskillrequest.h
  approveskillrequest_p.h
  approveskillresponse.h
  approveskillresponse_p.h
  associatecontactwithaddressbookrequest.h
  associatecontactwithaddressbookrequest_p.h
  associatecontactwithaddressbookresponse.h
  associatecontactwithaddressbookresponse_p.h
  associatedevicewithnetworkprofilerequest.h
  associatedevicewithnetworkprofilerequest_p.h
  associatedevicewithnetworkprofileresponse.h
  associatedevicewithnetworkprofileresponse_p.h
  associatedevicewithroomrequest.h
  associatedevicewithroomrequest_p.h
  associatedevicewithroomresponse.h
  associatedevicewithroomresponse_p.h
  associateskillgroupwithroomrequest.h
  associateskillgroupwithroomrequest_p.h
  associateskillgroupwithroomresponse.h
  associateskillgroupwithroomresponse_p.h
  associateskillwithskillgrouprequest.h
  associateskillwithskillgrouprequest_p.h
  associateskillwithskillgroupresponse.h
  associateskillwithskillgroupresponse_p.h
  associateskillwithusersrequest.h
  associateskillwithusersrequest_p.h
  associateskillwithusersresponse.h
  associateskillwithusersresponse_p.h
  createaddressbookrequest.h
  createaddressbookrequest_p.h
  createaddressbookresponse.h
  createaddressbookresponse_p.h
  createbusinessreportschedulerequest.h
  createbusinessreportschedulerequest_p.h
  createbusinessreportscheduleresponse.h
  createbusinessreportscheduleresponse_p.h
  createconferenceproviderrequest.h
  createconferenceproviderrequest_p.h
  createconferenceproviderresponse.h
  createconferenceproviderresponse_p.h
  createcontactrequest.h
  createcontactrequest_p.h
  createcontactresponse.h
  createcontactresponse_p.h
  creategatewaygrouprequest.h
  creategatewaygrouprequest_p.h
  creategatewaygroupresponse.h
  creategatewaygroupresponse_p.h
  createnetworkprofilerequest.h
  createnetworkprofilerequest_p.h
  createnetworkprofileresponse.h
  createnetworkprofileresponse_p.h
  createprofilerequest.h
  createprofilerequest_p.h
  createprofileresponse.h
  createprofileresponse_p.h
  createroomrequest.h
  createroomrequest_p.h
  createroomresponse.h
  createroomresponse_p.h
  createskillgrouprequest.h
  createskillgrouprequest_p.h
  createskillgroupresponse.h
  createskillgroupresponse_p.h
  createuserrequest.h
  createuserrequest_p.h
  createuserresponse.h
  createuserresponse_p.h
  deleteaddressbookrequest.h
  deleteaddressbookrequest_p.h
  deleteaddressbookresponse.h
  deleteaddressbookresponse_p.h
  deletebusinessreportschedulerequest.h
  deletebusinessreportschedulerequest_p.h
  deletebusinessreportscheduleresponse.h
  deletebusinessreportscheduleresponse_p.h
  deleteconferenceproviderrequest.h
  deleteconferenceproviderrequest_p.h
  deleteconferenceproviderresponse.h
  deleteconferenceproviderresponse_p.h
  deletecontactrequest.h
  deletecontactrequest_p.h
  deletecontactresponse.h
  deletecontactresponse_p.h
  deletedevicerequest.h
  deletedevicerequest_p.h
  deletedeviceresponse.h
  deletedeviceresponse_p.h
  deletedeviceusagedatarequest.h
  deletedeviceusagedatarequest_p.h
  deletedeviceusagedataresponse.h
  deletedeviceusagedataresponse_p.h
  deletegatewaygrouprequest.h
  deletegatewaygrouprequest_p.h
  deletegatewaygroupresponse.h
  deletegatewaygroupresponse_p.h
  deletenetworkprofilerequest.h
  deletenetworkprofilerequest_p.h
  deletenetworkprofileresponse.h
  deletenetworkprofileresponse_p.h
  deleteprofilerequest.h
  deleteprofilerequest_p.h
  deleteprofileresponse.h
  deleteprofileresponse_p.h
  deleteroomrequest.h
  deleteroomrequest_p.h
  deleteroomresponse.h
  deleteroomresponse_p.h
  deleteroomskillparameterrequest.h
  deleteroomskillparameterrequest_p.h
  deleteroomskillparameterresponse.h
  deleteroomskillparameterresponse_p.h
  deleteskillauthorizationrequest.h
  deleteskillauthorizationrequest_p.h
  deleteskillauthorizationresponse.h
  deleteskillauthorizationresponse_p.h
  deleteskillgrouprequest.h
  deleteskillgrouprequest_p.h
  deleteskillgroupresponse.h
  deleteskillgroupresponse_p.h
  deleteuserrequest.h
  deleteuserrequest_p.h
  deleteuserresponse.h
  deleteuserresponse_p.h
  disassociatecontactfromaddressbookrequest.h
  disassociatecontactfromaddressbookrequest_p.h
  disassociatecontactfromaddressbookresponse.h
  disassociatecontactfromaddressbookresponse_p.h
  disassociatedevicefromroomrequest.h
  disassociatedevicefromroomrequest_p.h
  disassociatedevicefromroomresponse.h
  disassociatedevicefromroomresponse_p.h
  disassociateskillfromskillgrouprequest.h
  disassociateskillfromskillgrouprequest_p.h
  disassociateskillfromskillgroupresponse.h
  disassociateskillfromskillgroupresponse_p.h
  disassociateskillfromusersrequest.h
  disassociateskillfromusersrequest_p.h
  disassociateskillfromusersresponse.h
  disassociateskillfromusersresponse_p.h
  disassociateskillgroupfromroomrequest.h
  disassociateskillgroupfromroomrequest_p.h
  disassociateskillgroupfromroomresponse.h
  disassociateskillgroupfromroomresponse_p.h
  forgetsmarthomeappliancesrequest.h
  forgetsmarthomeappliancesrequest_p.h
  forgetsmarthomeappliancesresponse.h
  forgetsmarthomeappliancesresponse_p.h
  getaddressbookrequest.h
  getaddressbookrequest_p.h
  getaddressbookresponse.h
  getaddressbookresponse_p.h
  getconferencepreferencerequest.h
  getconferencepreferencerequest_p.h
  getconferencepreferenceresponse.h
  getconferencepreferenceresponse_p.h
  getconferenceproviderrequest.h
  getconferenceproviderrequest_p.h
  getconferenceproviderresponse.h
  getconferenceproviderresponse_p.h
  getcontactrequest.h
  getcontactrequest_p.h
  getcontactresponse.h
  getcontactresponse_p.h
  getdevicerequest.h
  getdevicerequest_p.h
  getdeviceresponse.h
  getdeviceresponse_p.h
  getgatewayrequest.h
  getgatewayrequest_p.h
  getgatewayresponse.h
  getgatewayresponse_p.h
  getgatewaygrouprequest.h
  getgatewaygrouprequest_p.h
  getgatewaygroupresponse.h
  getgatewaygroupresponse_p.h
  getinvitationconfigurationrequest.h
  getinvitationconfigurationrequest_p.h
  getinvitationconfigurationresponse.h
  getinvitationconfigurationresponse_p.h
  getnetworkprofilerequest.h
  getnetworkprofilerequest_p.h
  getnetworkprofileresponse.h
  getnetworkprofileresponse_p.h
  getprofilerequest.h
  getprofilerequest_p.h
  getprofileresponse.h
  getprofileresponse_p.h
  getroomrequest.h
  getroomrequest_p.h
  getroomresponse.h
  getroomresponse_p.h
  getroomskillparameterrequest.h
  getroomskillparameterrequest_p.h
  getroomskillparameterresponse.h
  getroomskillparameterresponse_p.h
  getskillgrouprequest.h
  getskillgrouprequest_p.h
  getskillgroupresponse.h
  getskillgroupresponse_p.h
  listbusinessreportschedulesrequest.h
  listbusinessreportschedulesrequest_p.h
  listbusinessreportschedulesresponse.h
  listbusinessreportschedulesresponse_p.h
  listconferenceprovidersrequest.h
  listconferenceprovidersrequest_p.h
  listconferenceprovidersresponse.h
  listconferenceprovidersresponse_p.h
  listdeviceeventsrequest.h
  listdeviceeventsrequest_p.h
  listdeviceeventsresponse.h
  listdeviceeventsresponse_p.h
  listgatewaygroupsrequest.h
  listgatewaygroupsrequest_p.h
  listgatewaygroupsresponse.h
  listgatewaygroupsresponse_p.h
  listgatewaysrequest.h
  listgatewaysrequest_p.h
  listgatewaysresponse.h
  listgatewaysresponse_p.h
  listskillsrequest.h
  listskillsrequest_p.h
  listskillsresponse.h
  listskillsresponse_p.h
  listskillsstorecategoriesrequest.h
  listskillsstorecategoriesrequest_p.h
  listskillsstorecategoriesresponse.h
  listskillsstorecategoriesresponse_p.h
  listskillsstoreskillsbycategoryrequest.h
  listskillsstoreskillsbycategoryrequest_p.h
  listskillsstoreskillsbycategoryresponse.h
  listskillsstoreskillsbycategoryresponse_p.h
  listsmarthomeappliancesrequest.h
  listsmarthomeappliancesrequest_p.h
  listsmarthomeappliancesresponse.h
  listsmarthomeappliancesresponse_p.h
  listtagsrequest.h
  listtagsrequest_p.h
  listtagsresponse.h
  listtagsresponse_p.h
  putconferencepreferencerequest.h
  putconferencepreferencerequest_p.h
  putconferencepreferenceresponse.h
  putconferencepreferenceresponse_p.h
  putinvitationconfigurationrequest.h
  putinvitationconfigurationrequest_p.h
  putinvitationconfigurationresponse.h
  putinvitationconfigurationresponse_p.h
  putroomskillparameterrequest.h
  putroomskillparameterrequest_p.h
  putroomskillparameterresponse.h
  putroomskillparameterresponse_p.h
  putskillauthorizationrequest.h
  putskillauthorizationrequest_p.h
  putskillauthorizationresponse.h
  putskillauthorizationresponse_p.h
  registeravsdevicerequest.h
  registeravsdevicerequest_p.h
  registeravsdeviceresponse.h
  registeravsdeviceresponse_p.h
  rejectskillrequest.h
  rejectskillrequest_p.h
  rejectskillresponse.h
  rejectskillresponse_p.h
  resolveroomrequest.h
  resolveroomrequest_p.h
  resolveroomresponse.h
  resolveroomresponse_p.h
  revokeinvitationrequest.h
  revokeinvitationrequest_p.h
  revokeinvitationresponse.h
  revokeinvitationresponse_p.h
  searchaddressbooksrequest.h
  searchaddressbooksrequest_p.h
  searchaddressbooksresponse.h
  searchaddressbooksresponse_p.h
  searchcontactsrequest.h
  searchcontactsrequest_p.h
  searchcontactsresponse.h
  searchcontactsresponse_p.h
  searchdevicesrequest.h
  searchdevicesrequest_p.h
  searchdevicesresponse.h
  searchdevicesresponse_p.h
  searchnetworkprofilesrequest.h
  searchnetworkprofilesrequest_p.h
  searchnetworkprofilesresponse.h
  searchnetworkprofilesresponse_p.h
  searchprofilesrequest.h
  searchprofilesrequest_p.h
  searchprofilesresponse.h
  searchprofilesresponse_p.h
  searchroomsrequest.h
  searchroomsrequest_p.h
  searchroomsresponse.h
  searchroomsresponse_p.h
  searchskillgroupsrequest.h
  searchskillgroupsrequest_p.h
  searchskillgroupsresponse.h
  searchskillgroupsresponse_p.h
  searchusersrequest.h
  searchusersrequest_p.h
  searchusersresponse.h
  searchusersresponse_p.h
  sendannouncementrequest.h
  sendannouncementrequest_p.h
  sendannouncementresponse.h
  sendannouncementresponse_p.h
  sendinvitationrequest.h
  sendinvitationrequest_p.h
  sendinvitationresponse.h
  sendinvitationresponse_p.h
  startdevicesyncrequest.h
  startdevicesyncrequest_p.h
  startdevicesyncresponse.h
  startdevicesyncresponse_p.h
  startsmarthomeappliancediscoveryrequest.h
  startsmarthomeappliancediscoveryrequest_p.h
  startsmarthomeappliancediscoveryresponse.h
  startsmarthomeappliancediscoveryresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateaddressbookrequest.h
  updateaddressbookrequest_p.h
  updateaddressbookresponse.h
  updateaddressbookresponse_p.h
  updatebusinessreportschedulerequest.h
  updatebusinessreportschedulerequest_p.h
  updatebusinessreportscheduleresponse.h
  updatebusinessreportscheduleresponse_p.h
  updateconferenceproviderrequest.h
  updateconferenceproviderrequest_p.h
  updateconferenceproviderresponse.h
  updateconferenceproviderresponse_p.h
  updatecontactrequest.h
  updatecontactrequest_p.h
  updatecontactresponse.h
  updatecontactresponse_p.h
  updatedevicerequest.h
  updatedevicerequest_p.h
  updatedeviceresponse.h
  updatedeviceresponse_p.h
  updategatewayrequest.h
  updategatewayrequest_p.h
  updategatewayresponse.h
  updategatewayresponse_p.h
  updategatewaygrouprequest.h
  updategatewaygrouprequest_p.h
  updategatewaygroupresponse.h
  updategatewaygroupresponse_p.h
  updatenetworkprofilerequest.h
  updatenetworkprofilerequest_p.h
  updatenetworkprofileresponse.h
  updatenetworkprofileresponse_p.h
  updateprofilerequest.h
  updateprofilerequest_p.h
  updateprofileresponse.h
  updateprofileresponse_p.h
  updateroomrequest.h
  updateroomrequest_p.h
  updateroomresponse.h
  updateroomresponse_p.h
  updateskillgrouprequest.h
  updateskillgrouprequest_p.h
  updateskillgroupresponse.h
  updateskillgroupresponse_p.h
  alexaforbusinessclient.cpp
  alexaforbusinessrequest.cpp
  alexaforbusinessresponse.cpp
  approveskillrequest.cpp
  approveskillresponse.cpp
  associatecontactwithaddressbookrequest.cpp
  associatecontactwithaddressbookresponse.cpp
  associatedevicewithnetworkprofilerequest.cpp
  associatedevicewithnetworkprofileresponse.cpp
  associatedevicewithroomrequest.cpp
  associatedevicewithroomresponse.cpp
  associateskillgroupwithroomrequest.cpp
  associateskillgroupwithroomresponse.cpp
  associateskillwithskillgrouprequest.cpp
  associateskillwithskillgroupresponse.cpp
  associateskillwithusersrequest.cpp
  associateskillwithusersresponse.cpp
  createaddressbookrequest.cpp
  createaddressbookresponse.cpp
  createbusinessreportschedulerequest.cpp
  createbusinessreportscheduleresponse.cpp
  createconferenceproviderrequest.cpp
  createconferenceproviderresponse.cpp
  createcontactrequest.cpp
  createcontactresponse.cpp
  creategatewaygrouprequest.cpp
  creategatewaygroupresponse.cpp
  createnetworkprofilerequest.cpp
  createnetworkprofileresponse.cpp
  createprofilerequest.cpp
  createprofileresponse.cpp
  createroomrequest.cpp
  createroomresponse.cpp
  createskillgrouprequest.cpp
  createskillgroupresponse.cpp
  createuserrequest.cpp
  createuserresponse.cpp
  deleteaddressbookrequest.cpp
  deleteaddressbookresponse.cpp
  deletebusinessreportschedulerequest.cpp
  deletebusinessreportscheduleresponse.cpp
  deleteconferenceproviderrequest.cpp
  deleteconferenceproviderresponse.cpp
  deletecontactrequest.cpp
  deletecontactresponse.cpp
  deletedevicerequest.cpp
  deletedeviceresponse.cpp
  deletedeviceusagedatarequest.cpp
  deletedeviceusagedataresponse.cpp
  deletegatewaygrouprequest.cpp
  deletegatewaygroupresponse.cpp
  deletenetworkprofilerequest.cpp
  deletenetworkprofileresponse.cpp
  deleteprofilerequest.cpp
  deleteprofileresponse.cpp
  deleteroomrequest.cpp
  deleteroomresponse.cpp
  deleteroomskillparameterrequest.cpp
  deleteroomskillparameterresponse.cpp
  deleteskillauthorizationrequest.cpp
  deleteskillauthorizationresponse.cpp
  deleteskillgrouprequest.cpp
  deleteskillgroupresponse.cpp
  deleteuserrequest.cpp
  deleteuserresponse.cpp
  disassociatecontactfromaddressbookrequest.cpp
  disassociatecontactfromaddressbookresponse.cpp
  disassociatedevicefromroomrequest.cpp
  disassociatedevicefromroomresponse.cpp
  disassociateskillfromskillgrouprequest.cpp
  disassociateskillfromskillgroupresponse.cpp
  disassociateskillfromusersrequest.cpp
  disassociateskillfromusersresponse.cpp
  disassociateskillgroupfromroomrequest.cpp
  disassociateskillgroupfromroomresponse.cpp
  forgetsmarthomeappliancesrequest.cpp
  forgetsmarthomeappliancesresponse.cpp
  getaddressbookrequest.cpp
  getaddressbookresponse.cpp
  getconferencepreferencerequest.cpp
  getconferencepreferenceresponse.cpp
  getconferenceproviderrequest.cpp
  getconferenceproviderresponse.cpp
  getcontactrequest.cpp
  getcontactresponse.cpp
  getdevicerequest.cpp
  getdeviceresponse.cpp
  getgatewayrequest.cpp
  getgatewayresponse.cpp
  getgatewaygrouprequest.cpp
  getgatewaygroupresponse.cpp
  getinvitationconfigurationrequest.cpp
  getinvitationconfigurationresponse.cpp
  getnetworkprofilerequest.cpp
  getnetworkprofileresponse.cpp
  getprofilerequest.cpp
  getprofileresponse.cpp
  getroomrequest.cpp
  getroomresponse.cpp
  getroomskillparameterrequest.cpp
  getroomskillparameterresponse.cpp
  getskillgrouprequest.cpp
  getskillgroupresponse.cpp
  listbusinessreportschedulesrequest.cpp
  listbusinessreportschedulesresponse.cpp
  listconferenceprovidersrequest.cpp
  listconferenceprovidersresponse.cpp
  listdeviceeventsrequest.cpp
  listdeviceeventsresponse.cpp
  listgatewaygroupsrequest.cpp
  listgatewaygroupsresponse.cpp
  listgatewaysrequest.cpp
  listgatewaysresponse.cpp
  listskillsrequest.cpp
  listskillsresponse.cpp
  listskillsstorecategoriesrequest.cpp
  listskillsstorecategoriesresponse.cpp
  listskillsstoreskillsbycategoryrequest.cpp
  listskillsstoreskillsbycategoryresponse.cpp
  listsmarthomeappliancesrequest.cpp
  listsmarthomeappliancesresponse.cpp
  listtagsrequest.cpp
  listtagsresponse.cpp
  putconferencepreferencerequest.cpp
  putconferencepreferenceresponse.cpp
  putinvitationconfigurationrequest.cpp
  putinvitationconfigurationresponse.cpp
  putroomskillparameterrequest.cpp
  putroomskillparameterresponse.cpp
  putskillauthorizationrequest.cpp
  putskillauthorizationresponse.cpp
  registeravsdevicerequest.cpp
  registeravsdeviceresponse.cpp
  rejectskillrequest.cpp
  rejectskillresponse.cpp
  resolveroomrequest.cpp
  resolveroomresponse.cpp
  revokeinvitationrequest.cpp
  revokeinvitationresponse.cpp
  searchaddressbooksrequest.cpp
  searchaddressbooksresponse.cpp
  searchcontactsrequest.cpp
  searchcontactsresponse.cpp
  searchdevicesrequest.cpp
  searchdevicesresponse.cpp
  searchnetworkprofilesrequest.cpp
  searchnetworkprofilesresponse.cpp
  searchprofilesrequest.cpp
  searchprofilesresponse.cpp
  searchroomsrequest.cpp
  searchroomsresponse.cpp
  searchskillgroupsrequest.cpp
  searchskillgroupsresponse.cpp
  searchusersrequest.cpp
  searchusersresponse.cpp
  sendannouncementrequest.cpp
  sendannouncementresponse.cpp
  sendinvitationrequest.cpp
  sendinvitationresponse.cpp
  startdevicesyncrequest.cpp
  startdevicesyncresponse.cpp
  startsmarthomeappliancediscoveryrequest.cpp
  startsmarthomeappliancediscoveryresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateaddressbookrequest.cpp
  updateaddressbookresponse.cpp
  updatebusinessreportschedulerequest.cpp
  updatebusinessreportscheduleresponse.cpp
  updateconferenceproviderrequest.cpp
  updateconferenceproviderresponse.cpp
  updatecontactrequest.cpp
  updatecontactresponse.cpp
  updatedevicerequest.cpp
  updatedeviceresponse.cpp
  updategatewayrequest.cpp
  updategatewayresponse.cpp
  updategatewaygrouprequest.cpp
  updategatewaygroupresponse.cpp
  updatenetworkprofilerequest.cpp
  updatenetworkprofileresponse.cpp
  updateprofilerequest.cpp
  updateprofileresponse.cpp
  updateroomrequest.cpp
  updateroomresponse.cpp
  updateskillgrouprequest.cpp
  updateskillgroupresponse.cpp)

target_link_libraries(QtAwsAlexaForBusiness
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
