# SPDX-FileCopyrightText: 2013-2022 Paul Colby <git@colby.id.au>
# SPDX-License-Identifier: LGPL-3.0-or-later

add_compile_definitions(QTAWSAMP_LIBRARY)

add_library(QtAwsAmp
  qtawsampglobal.h
  ampclient.h
  ampclient_p.h
  amprequest.h
  amprequest_p.h
  ampresponse.h
  ampresponse_p.h
  createalertmanagerdefinitionrequest.h
  createalertmanagerdefinitionrequest_p.h
  createalertmanagerdefinitionresponse.h
  createalertmanagerdefinitionresponse_p.h
  createloggingconfigurationrequest.h
  createloggingconfigurationrequest_p.h
  createloggingconfigurationresponse.h
  createloggingconfigurationresponse_p.h
  createrulegroupsnamespacerequest.h
  createrulegroupsnamespacerequest_p.h
  createrulegroupsnamespaceresponse.h
  createrulegroupsnamespaceresponse_p.h
  createworkspacerequest.h
  createworkspacerequest_p.h
  createworkspaceresponse.h
  createworkspaceresponse_p.h
  deletealertmanagerdefinitionrequest.h
  deletealertmanagerdefinitionrequest_p.h
  deletealertmanagerdefinitionresponse.h
  deletealertmanagerdefinitionresponse_p.h
  deleteloggingconfigurationrequest.h
  deleteloggingconfigurationrequest_p.h
  deleteloggingconfigurationresponse.h
  deleteloggingconfigurationresponse_p.h
  deleterulegroupsnamespacerequest.h
  deleterulegroupsnamespacerequest_p.h
  deleterulegroupsnamespaceresponse.h
  deleterulegroupsnamespaceresponse_p.h
  deleteworkspacerequest.h
  deleteworkspacerequest_p.h
  deleteworkspaceresponse.h
  deleteworkspaceresponse_p.h
  describealertmanagerdefinitionrequest.h
  describealertmanagerdefinitionrequest_p.h
  describealertmanagerdefinitionresponse.h
  describealertmanagerdefinitionresponse_p.h
  describeloggingconfigurationrequest.h
  describeloggingconfigurationrequest_p.h
  describeloggingconfigurationresponse.h
  describeloggingconfigurationresponse_p.h
  describerulegroupsnamespacerequest.h
  describerulegroupsnamespacerequest_p.h
  describerulegroupsnamespaceresponse.h
  describerulegroupsnamespaceresponse_p.h
  describeworkspacerequest.h
  describeworkspacerequest_p.h
  describeworkspaceresponse.h
  describeworkspaceresponse_p.h
  listrulegroupsnamespacesrequest.h
  listrulegroupsnamespacesrequest_p.h
  listrulegroupsnamespacesresponse.h
  listrulegroupsnamespacesresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  listworkspacesrequest.h
  listworkspacesrequest_p.h
  listworkspacesresponse.h
  listworkspacesresponse_p.h
  putalertmanagerdefinitionrequest.h
  putalertmanagerdefinitionrequest_p.h
  putalertmanagerdefinitionresponse.h
  putalertmanagerdefinitionresponse_p.h
  putrulegroupsnamespacerequest.h
  putrulegroupsnamespacerequest_p.h
  putrulegroupsnamespaceresponse.h
  putrulegroupsnamespaceresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateloggingconfigurationrequest.h
  updateloggingconfigurationrequest_p.h
  updateloggingconfigurationresponse.h
  updateloggingconfigurationresponse_p.h
  updateworkspacealiasrequest.h
  updateworkspacealiasrequest_p.h
  updateworkspacealiasresponse.h
  updateworkspacealiasresponse_p.h
  ampclient.cpp
  amprequest.cpp
  ampresponse.cpp
  createalertmanagerdefinitionrequest.cpp
  createalertmanagerdefinitionresponse.cpp
  createloggingconfigurationrequest.cpp
  createloggingconfigurationresponse.cpp
  createrulegroupsnamespacerequest.cpp
  createrulegroupsnamespaceresponse.cpp
  createworkspacerequest.cpp
  createworkspaceresponse.cpp
  deletealertmanagerdefinitionrequest.cpp
  deletealertmanagerdefinitionresponse.cpp
  deleteloggingconfigurationrequest.cpp
  deleteloggingconfigurationresponse.cpp
  deleterulegroupsnamespacerequest.cpp
  deleterulegroupsnamespaceresponse.cpp
  deleteworkspacerequest.cpp
  deleteworkspaceresponse.cpp
  describealertmanagerdefinitionrequest.cpp
  describealertmanagerdefinitionresponse.cpp
  describeloggingconfigurationrequest.cpp
  describeloggingconfigurationresponse.cpp
  describerulegroupsnamespacerequest.cpp
  describerulegroupsnamespaceresponse.cpp
  describeworkspacerequest.cpp
  describeworkspaceresponse.cpp
  listrulegroupsnamespacesrequest.cpp
  listrulegroupsnamespacesresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  listworkspacesrequest.cpp
  listworkspacesresponse.cpp
  putalertmanagerdefinitionrequest.cpp
  putalertmanagerdefinitionresponse.cpp
  putrulegroupsnamespacerequest.cpp
  putrulegroupsnamespaceresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateloggingconfigurationrequest.cpp
  updateloggingconfigurationresponse.cpp
  updateworkspacealiasrequest.cpp
  updateworkspacealiasresponse.cpp)

target_link_libraries(QtAwsAmp
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
