add_library(QtAwsAmplify
  amplifyclient.h
  amplifyclient_p.h
  amplifyrequest.h
  amplifyrequest_p.h
  amplifyresponse.h
  amplifyresponse_p.h
  createapprequest.h
  createapprequest_p.h
  createappresponse.h
  createappresponse_p.h
  createbackendenvironmentrequest.h
  createbackendenvironmentrequest_p.h
  createbackendenvironmentresponse.h
  createbackendenvironmentresponse_p.h
  createbranchrequest.h
  createbranchrequest_p.h
  createbranchresponse.h
  createbranchresponse_p.h
  createdeploymentrequest.h
  createdeploymentrequest_p.h
  createdeploymentresponse.h
  createdeploymentresponse_p.h
  createdomainassociationrequest.h
  createdomainassociationrequest_p.h
  createdomainassociationresponse.h
  createdomainassociationresponse_p.h
  createwebhookrequest.h
  createwebhookrequest_p.h
  createwebhookresponse.h
  createwebhookresponse_p.h
  deleteapprequest.h
  deleteapprequest_p.h
  deleteappresponse.h
  deleteappresponse_p.h
  deletebackendenvironmentrequest.h
  deletebackendenvironmentrequest_p.h
  deletebackendenvironmentresponse.h
  deletebackendenvironmentresponse_p.h
  deletebranchrequest.h
  deletebranchrequest_p.h
  deletebranchresponse.h
  deletebranchresponse_p.h
  deletedomainassociationrequest.h
  deletedomainassociationrequest_p.h
  deletedomainassociationresponse.h
  deletedomainassociationresponse_p.h
  deletejobrequest.h
  deletejobrequest_p.h
  deletejobresponse.h
  deletejobresponse_p.h
  deletewebhookrequest.h
  deletewebhookrequest_p.h
  deletewebhookresponse.h
  deletewebhookresponse_p.h
  generateaccesslogsrequest.h
  generateaccesslogsrequest_p.h
  generateaccesslogsresponse.h
  generateaccesslogsresponse_p.h
  getapprequest.h
  getapprequest_p.h
  getappresponse.h
  getappresponse_p.h
  getartifacturlrequest.h
  getartifacturlrequest_p.h
  getartifacturlresponse.h
  getartifacturlresponse_p.h
  getbackendenvironmentrequest.h
  getbackendenvironmentrequest_p.h
  getbackendenvironmentresponse.h
  getbackendenvironmentresponse_p.h
  getbranchrequest.h
  getbranchrequest_p.h
  getbranchresponse.h
  getbranchresponse_p.h
  getdomainassociationrequest.h
  getdomainassociationrequest_p.h
  getdomainassociationresponse.h
  getdomainassociationresponse_p.h
  getjobrequest.h
  getjobrequest_p.h
  getjobresponse.h
  getjobresponse_p.h
  getwebhookrequest.h
  getwebhookrequest_p.h
  getwebhookresponse.h
  getwebhookresponse_p.h
  listappsrequest.h
  listappsrequest_p.h
  listappsresponse.h
  listappsresponse_p.h
  listartifactsrequest.h
  listartifactsrequest_p.h
  listartifactsresponse.h
  listartifactsresponse_p.h
  listbackendenvironmentsrequest.h
  listbackendenvironmentsrequest_p.h
  listbackendenvironmentsresponse.h
  listbackendenvironmentsresponse_p.h
  listbranchesrequest.h
  listbranchesrequest_p.h
  listbranchesresponse.h
  listbranchesresponse_p.h
  listdomainassociationsrequest.h
  listdomainassociationsrequest_p.h
  listdomainassociationsresponse.h
  listdomainassociationsresponse_p.h
  listjobsrequest.h
  listjobsrequest_p.h
  listjobsresponse.h
  listjobsresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  listwebhooksrequest.h
  listwebhooksrequest_p.h
  listwebhooksresponse.h
  listwebhooksresponse_p.h
  startdeploymentrequest.h
  startdeploymentrequest_p.h
  startdeploymentresponse.h
  startdeploymentresponse_p.h
  startjobrequest.h
  startjobrequest_p.h
  startjobresponse.h
  startjobresponse_p.h
  stopjobrequest.h
  stopjobrequest_p.h
  stopjobresponse.h
  stopjobresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateapprequest.h
  updateapprequest_p.h
  updateappresponse.h
  updateappresponse_p.h
  updatebranchrequest.h
  updatebranchrequest_p.h
  updatebranchresponse.h
  updatebranchresponse_p.h
  updatedomainassociationrequest.h
  updatedomainassociationrequest_p.h
  updatedomainassociationresponse.h
  updatedomainassociationresponse_p.h
  updatewebhookrequest.h
  updatewebhookrequest_p.h
  updatewebhookresponse.h
  updatewebhookresponse_p.h
  amplifyclient.cpp
  amplifyrequest.cpp
  amplifyresponse.cpp
  createapprequest.cpp
  createappresponse.cpp
  createbackendenvironmentrequest.cpp
  createbackendenvironmentresponse.cpp
  createbranchrequest.cpp
  createbranchresponse.cpp
  createdeploymentrequest.cpp
  createdeploymentresponse.cpp
  createdomainassociationrequest.cpp
  createdomainassociationresponse.cpp
  createwebhookrequest.cpp
  createwebhookresponse.cpp
  deleteapprequest.cpp
  deleteappresponse.cpp
  deletebackendenvironmentrequest.cpp
  deletebackendenvironmentresponse.cpp
  deletebranchrequest.cpp
  deletebranchresponse.cpp
  deletedomainassociationrequest.cpp
  deletedomainassociationresponse.cpp
  deletejobrequest.cpp
  deletejobresponse.cpp
  deletewebhookrequest.cpp
  deletewebhookresponse.cpp
  generateaccesslogsrequest.cpp
  generateaccesslogsresponse.cpp
  getapprequest.cpp
  getappresponse.cpp
  getartifacturlrequest.cpp
  getartifacturlresponse.cpp
  getbackendenvironmentrequest.cpp
  getbackendenvironmentresponse.cpp
  getbranchrequest.cpp
  getbranchresponse.cpp
  getdomainassociationrequest.cpp
  getdomainassociationresponse.cpp
  getjobrequest.cpp
  getjobresponse.cpp
  getwebhookrequest.cpp
  getwebhookresponse.cpp
  listappsrequest.cpp
  listappsresponse.cpp
  listartifactsrequest.cpp
  listartifactsresponse.cpp
  listbackendenvironmentsrequest.cpp
  listbackendenvironmentsresponse.cpp
  listbranchesrequest.cpp
  listbranchesresponse.cpp
  listdomainassociationsrequest.cpp
  listdomainassociationsresponse.cpp
  listjobsrequest.cpp
  listjobsresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  listwebhooksrequest.cpp
  listwebhooksresponse.cpp
  startdeploymentrequest.cpp
  startdeploymentresponse.cpp
  startjobrequest.cpp
  startjobresponse.cpp
  stopjobrequest.cpp
  stopjobresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateapprequest.cpp
  updateappresponse.cpp
  updatebranchrequest.cpp
  updatebranchresponse.cpp
  updatedomainassociationrequest.cpp
  updatedomainassociationresponse.cpp
  updatewebhookrequest.cpp
  updatewebhookresponse.cpp)

target_link_libraries(QtAwsAmplify
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
