# SPDX-FileCopyrightText: 2013-2022 Paul Colby <git@colby.id.au>
# SPDX-License-Identifier: LGPL-3.0-or-later

add_compile_definitions(QTAWSAMPLIFYBACKEND_LIBRARY)

add_library(QtAwsAmplifyBackend
  qtawsamplifybackendglobal.h
  amplifybackendclient.h
  amplifybackendclient_p.h
  amplifybackendrequest.h
  amplifybackendrequest_p.h
  amplifybackendresponse.h
  amplifybackendresponse_p.h
  clonebackendrequest.h
  clonebackendrequest_p.h
  clonebackendresponse.h
  clonebackendresponse_p.h
  createbackendrequest.h
  createbackendrequest_p.h
  createbackendresponse.h
  createbackendresponse_p.h
  createbackendapirequest.h
  createbackendapirequest_p.h
  createbackendapiresponse.h
  createbackendapiresponse_p.h
  createbackendauthrequest.h
  createbackendauthrequest_p.h
  createbackendauthresponse.h
  createbackendauthresponse_p.h
  createbackendconfigrequest.h
  createbackendconfigrequest_p.h
  createbackendconfigresponse.h
  createbackendconfigresponse_p.h
  createbackendstoragerequest.h
  createbackendstoragerequest_p.h
  createbackendstorageresponse.h
  createbackendstorageresponse_p.h
  createtokenrequest.h
  createtokenrequest_p.h
  createtokenresponse.h
  createtokenresponse_p.h
  deletebackendrequest.h
  deletebackendrequest_p.h
  deletebackendresponse.h
  deletebackendresponse_p.h
  deletebackendapirequest.h
  deletebackendapirequest_p.h
  deletebackendapiresponse.h
  deletebackendapiresponse_p.h
  deletebackendauthrequest.h
  deletebackendauthrequest_p.h
  deletebackendauthresponse.h
  deletebackendauthresponse_p.h
  deletebackendstoragerequest.h
  deletebackendstoragerequest_p.h
  deletebackendstorageresponse.h
  deletebackendstorageresponse_p.h
  deletetokenrequest.h
  deletetokenrequest_p.h
  deletetokenresponse.h
  deletetokenresponse_p.h
  generatebackendapimodelsrequest.h
  generatebackendapimodelsrequest_p.h
  generatebackendapimodelsresponse.h
  generatebackendapimodelsresponse_p.h
  getbackendrequest.h
  getbackendrequest_p.h
  getbackendresponse.h
  getbackendresponse_p.h
  getbackendapirequest.h
  getbackendapirequest_p.h
  getbackendapiresponse.h
  getbackendapiresponse_p.h
  getbackendapimodelsrequest.h
  getbackendapimodelsrequest_p.h
  getbackendapimodelsresponse.h
  getbackendapimodelsresponse_p.h
  getbackendauthrequest.h
  getbackendauthrequest_p.h
  getbackendauthresponse.h
  getbackendauthresponse_p.h
  getbackendjobrequest.h
  getbackendjobrequest_p.h
  getbackendjobresponse.h
  getbackendjobresponse_p.h
  getbackendstoragerequest.h
  getbackendstoragerequest_p.h
  getbackendstorageresponse.h
  getbackendstorageresponse_p.h
  gettokenrequest.h
  gettokenrequest_p.h
  gettokenresponse.h
  gettokenresponse_p.h
  importbackendauthrequest.h
  importbackendauthrequest_p.h
  importbackendauthresponse.h
  importbackendauthresponse_p.h
  importbackendstoragerequest.h
  importbackendstoragerequest_p.h
  importbackendstorageresponse.h
  importbackendstorageresponse_p.h
  listbackendjobsrequest.h
  listbackendjobsrequest_p.h
  listbackendjobsresponse.h
  listbackendjobsresponse_p.h
  lists3bucketsrequest.h
  lists3bucketsrequest_p.h
  lists3bucketsresponse.h
  lists3bucketsresponse_p.h
  removeallbackendsrequest.h
  removeallbackendsrequest_p.h
  removeallbackendsresponse.h
  removeallbackendsresponse_p.h
  removebackendconfigrequest.h
  removebackendconfigrequest_p.h
  removebackendconfigresponse.h
  removebackendconfigresponse_p.h
  updatebackendapirequest.h
  updatebackendapirequest_p.h
  updatebackendapiresponse.h
  updatebackendapiresponse_p.h
  updatebackendauthrequest.h
  updatebackendauthrequest_p.h
  updatebackendauthresponse.h
  updatebackendauthresponse_p.h
  updatebackendconfigrequest.h
  updatebackendconfigrequest_p.h
  updatebackendconfigresponse.h
  updatebackendconfigresponse_p.h
  updatebackendjobrequest.h
  updatebackendjobrequest_p.h
  updatebackendjobresponse.h
  updatebackendjobresponse_p.h
  updatebackendstoragerequest.h
  updatebackendstoragerequest_p.h
  updatebackendstorageresponse.h
  updatebackendstorageresponse_p.h
  amplifybackendclient.cpp
  amplifybackendrequest.cpp
  amplifybackendresponse.cpp
  clonebackendrequest.cpp
  clonebackendresponse.cpp
  createbackendrequest.cpp
  createbackendresponse.cpp
  createbackendapirequest.cpp
  createbackendapiresponse.cpp
  createbackendauthrequest.cpp
  createbackendauthresponse.cpp
  createbackendconfigrequest.cpp
  createbackendconfigresponse.cpp
  createbackendstoragerequest.cpp
  createbackendstorageresponse.cpp
  createtokenrequest.cpp
  createtokenresponse.cpp
  deletebackendrequest.cpp
  deletebackendresponse.cpp
  deletebackendapirequest.cpp
  deletebackendapiresponse.cpp
  deletebackendauthrequest.cpp
  deletebackendauthresponse.cpp
  deletebackendstoragerequest.cpp
  deletebackendstorageresponse.cpp
  deletetokenrequest.cpp
  deletetokenresponse.cpp
  generatebackendapimodelsrequest.cpp
  generatebackendapimodelsresponse.cpp
  getbackendrequest.cpp
  getbackendresponse.cpp
  getbackendapirequest.cpp
  getbackendapiresponse.cpp
  getbackendapimodelsrequest.cpp
  getbackendapimodelsresponse.cpp
  getbackendauthrequest.cpp
  getbackendauthresponse.cpp
  getbackendjobrequest.cpp
  getbackendjobresponse.cpp
  getbackendstoragerequest.cpp
  getbackendstorageresponse.cpp
  gettokenrequest.cpp
  gettokenresponse.cpp
  importbackendauthrequest.cpp
  importbackendauthresponse.cpp
  importbackendstoragerequest.cpp
  importbackendstorageresponse.cpp
  listbackendjobsrequest.cpp
  listbackendjobsresponse.cpp
  lists3bucketsrequest.cpp
  lists3bucketsresponse.cpp
  removeallbackendsrequest.cpp
  removeallbackendsresponse.cpp
  removebackendconfigrequest.cpp
  removebackendconfigresponse.cpp
  updatebackendapirequest.cpp
  updatebackendapiresponse.cpp
  updatebackendauthrequest.cpp
  updatebackendauthresponse.cpp
  updatebackendconfigrequest.cpp
  updatebackendconfigresponse.cpp
  updatebackendjobrequest.cpp
  updatebackendjobresponse.cpp
  updatebackendstoragerequest.cpp
  updatebackendstorageresponse.cpp)

target_link_libraries(QtAwsAmplifyBackend
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
